# tamp-manipulation

./: .gitignore  .gitmodules  README.md  sas_plan
conveyor_belt_tamp/: BUILD.bazel  README.md  conveyor_belt_simulation.cc  conveyor_belt_simulation_3obj.cc  kuka_plan_runner.cc  manipulation_station.cc  manipulation_station.h  multi_traj_test.cc  multi_wp_traj_test.cc  object_sorting_simulation.cc  object_state_estimator.cc  object_state_estimator.h  object_state_estimator.h.gch  object_state_listener.cc  pddl_multi_wp_query_handler.cc  pddl_multi_wp_query_handler_contact.cc  pddl_query_handler.cc  single_traj_test.cc  single_traj_test_contact.cc
conveyor_belt_tamp/models/: BUILD.bazel
conveyor_belt_tamp/pddl/: causal_graph_planner.py  causal_graph_reactive_planner.py  compute_admm.py  conveyor_belt_planner.py  json_plan_runner.py  json_traj_runner.py  multi_plan_run.py  object_sorting_plan.py  object_sorting_reactive_planner.py  output.sas  pddl_cg_planner.py  pddl_planner.py  single_tree_runner.py  throw_domain.pddl  throw_problem.pddl  two_tree_pddl_planner.py
conveyor_belt_tamp/results/: admm_queries20201011T104702.json  admm_queries20201011T132848.json  admm_queries20201011T151101.json  admm_queries20201011T154025.json  admm_queries20201011T163158.json  admm_queries20201011T173712.json  admm_queries20201012T214934.json  admm_queries20201012T220222.json  admm_queries20201012T230423.json  admm_queries20201012T232119.json  admm_queries20201012T233853.json  admm_queries20201012T234409.json  admm_queries20201012T235523.json  admm_queries20201013T001637.json  admm_queries20201013T005127.json  admm_queries20201013T041705.json  admm_queries20201013T044823.json  admm_queries20201013T094752.json  admm_queries20201013T101507.json  admm_queries20201013T112002.json  admm_queries20201013T115150.json  admm_queries20201013T121130.json  admm_queries20201013T122750.json  admm_queries20201013T124526.json  admm_queries20201013T145240.json  admm_queries20201014T133712.json  admm_queries20201014T143840.json  admm_queries20201014T231637.json  admm_queries20201015T000311.json  admm_queries20201015T105923.json  admm_queries20201015T112603.json  admm_queries20201015T114642.json  admm_queries20201015T121752.json  admm_queries20201015T123856.json  admm_queries20201015T172032.json  admm_traj20201010T114449.json  admm_traj20201010T120852.json  admm_traj20201010T123408.json  good_admm_static_queries20201011T182316.json  plot_cost_vs_action.m  (+7 more)
conveyor_belt_tamp/setup/: geo_setup.json  geo_setup_multi_wp.json  geo_setup_multi_wp_stationary.json  geo_setup_stationary.json  sim_setup.json  traj_setup.json  traj_setup_multi_wp.json
manipulation_tamp/: BUILD.bazel  README.md  conveyor_belt_simulation.cc  conveyor_belt_simulation_3obj.cc  fix_time_vec.py  json_traj_runner.py  kuka_plan_runner.cc  kuka_plan_runner_interp.cc  manipulation_station.cc  manipulation_station.h  multi_traj_test.cc  multi_wp_traj_test.cc  object_sorting_simulation.cc  object_state_estimator.cc  object_state_estimator.h  object_state_listener.cc  pddl_multi_wp_query_handler.cc  pddl_multi_wp_query_handler_contact.cc  pddl_query_handler.cc  single_traj_test.cc  single_traj_test_contact.cc
manipulation_tamp/models/: sphere.sdf
manipulation_tamp/planner/: compute_admm.py  conveyor_belt_planner.py  modify_throwing_time.py  object_sorting_plan.py  object_sorting_planner.py  replace_traj.py
manipulation_tamp/results/: 12_updated.json  22_updated.json  admm_queries20201015T210030.json  admm_queries20201210T163411.json  admm_queries20201229T223846.json  admm_traj20201231T122016.json  admm_traj20201231T125943.json  admm_traj20201231T143120.json  admm_traj20201231T152651.json  admm_traj20201231T161129.json  admm_traj20201231T165437.json  admm_traj20201231T184937.json  admm_traj20210101T114121.json  admm_traj20210101T131659.json  admm_traj20210101T142832.json  admm_traj20210101T150541.json  admm_traj20210101T152914.json  admm_traj20210101T155205.json  admm_traj20210101T172204.json  admm_traj20210101T182408.json  admm_traj20210101T190521.json  admm_traj20210101T192859.json  admm_traj20210101T195551.json  admm_traj20210101T202129.json  admm_traj20210101T204918.json  admm_traj20210101T214352.json  admm_traj20210101T221843.json  admm_traj20210102T095435.json  admm_traj20210102T102951.json  admm_traj20210103T094050.json  admm_traj20210103T111551.json  admm_traj20210103T151122.json  admm_traj20210103T201538.json  admm_traj20210103T213516.json  admm_traj20210104T100635.json  con11.json  con17.json  con2.json  con21.json  con25.json  (+5 more)
manipulation_tamp/setup/: geo_setup.json  geo_setup_multi_wp.json  sim_setup.json  traj_setup.json
traj_gen/: BUILD.bazel  admm_runner.cc  admm_runner.h  autodiff_example.cc  ca_unitest.cc  config.h  cost_function_kuka_arm.cc  cost_function_kuka_arm.h  cost_function_kuka_arm_track.cc  cost_function_kuka_arm_track.h  ddp_runner.cc  ddp_runner.h  ddp_runner.h.gch  ilqrsolver.cpp  ilqrsolver_track.cc  ilqrsolver_track.h  kuka_arm.cpp  kuka_arm.h  kuka_arm_track.cc  kuka_arm_track.h  rerun_multi_traj.cc  spline.h
traj_gen/admm_contact_constraints/: BUILD.bazel  admm_runner_contact_new.cc  admm_runner_contact_new.h  cost_function_contact_new.cc  cost_function_contact_new.h  cost_function_contact_track_new.cc  cost_function_contact_track_new.h  ddp_runner_contact_new.cc  ddp_runner_contact_new.h  ilqr-kkt_solver_new.cpp  ilqr-kkt_solver_new.h  ilqr-kkt_solver_track_new.cc  ilqr-kkt_solver_track_new.h  kuka_arm_contact_new.cc  kuka_arm_contact_new.cpp  kuka_arm_contact_new.h  kuka_arm_track_contact_new.cc  kuka_arm_track_contact_new.h  qp_test.cc
traj_gen/constraint/: BUILD.bazel  fk_constraint.cc  fk_constraint.h
traj_gen/ilqr_kkt/: BUILD.bazel  admm_runner_contact.cc  admm_runner_contact.h  config-kkt.h  cost_function_contact_track.cc  cost_function_contact_track.h  cost_function_kuka_arm.h  cost_function_kuka_arm_contact.cc  cost_function_kuka_arm_contact.h  ddp_runner_contact.cc  ddp_runner_contact.h  ilqr-kkt_solver.cpp  ilqr-kkt_solver.h  ilqr-kkt_solver_track.cc  ilqr-kkt_solver_track.h  ilqr-kkt_test.cc  (+11 more)
(+192 files in other folders)
