load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)

package(
    default_visibility = [":__subpackages__"],
)

drake_cc_library(
    name = "config",
    hdrs = ["config.h"],
    visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "cost_function_kuka_arm",
    srcs = ["cost_function_kuka_arm.cc",],
    hdrs = ["cost_function_kuka_arm.h",],
    visibility = ["//visibility:public"],
    deps = [
        "@eigen",
        "//traj_gen:config",
    ]
)

drake_cc_library(
    name = "cost_function_kuka_arm_track",
    srcs = ["cost_function_kuka_arm_track.cc",],
    hdrs = ["cost_function_kuka_arm_track.h",
            ],
    visibility = ["//visibility:public"],
    deps = [
        "@eigen",
        "//traj_gen:config",
    ]
)

drake_cc_library(
    name = "kuka_arm",
    srcs = ["kuka_arm.cpp",],
    hdrs = ["kuka_arm.h",
            "cost_function_kuka_arm.h",
            ],
    visibility = ["//visibility:public"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
        "//manipulation/models/wsg_50_description:models",
        "//manipulation/models/kuka_connector_description:models",
    ],
    deps = [
        "@eigen",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//examples/kuka_iiwa_arm:iiwa_lcm",
        "//multibody/plant",
        "//multibody/parsing",
        "//math:geometric_transform",
        "//common:find_resource",
        "//traj_gen:config",
    ],
)

drake_cc_library(
    name = "kuka_arm_track",
    srcs = ["kuka_arm_track.cc",],
    hdrs = ["kuka_arm_track.h",
            "cost_function_kuka_arm_track.h",
            ],
    visibility = ["//visibility:public"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
        "//manipulation/models/wsg_50_description:models",
        "//manipulation/models/kuka_connector_description:models",
    ],
    deps = [
        "@eigen",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//examples/kuka_iiwa_arm:iiwa_lcm",
        "//common:find_resource",
        "//multibody/plant",
        "//multibody/parsing",
        "//math:geometric_transform",
        "//traj_gen:config",
    ]
)

drake_cc_library(
    name = "ilqrsolver",
    srcs = ["ilqrsolver.cpp",],
    hdrs = ["ilqrsolver.h",
            "kuka_arm.h",
            "cost_function_kuka_arm.h",],
    visibility = ["//visibility:public"],
    deps = [
        "@eigen",
        "//common:find_resource",
        "//multibody/plant",
        "//multibody/parsing",
        "//traj_gen:config",
    ]
)

drake_cc_library(
    name = "ilqrsolver_track",
    srcs = ["ilqrsolver_track.cc",],
    hdrs = ["ilqrsolver_track.h",
            "kuka_arm_track.h",
            "cost_function_kuka_arm_track.h",],
    visibility = ["//visibility:public"],
    deps = [
        "@eigen",
        "//common:find_resource",
        "//multibody/plant",
        "//multibody/parsing",
        "//traj_gen:config",
    ]
)

drake_cc_library(
    name = "ddp_runner",
    srcs = ["ddp_runner.cc",],
    hdrs = ["ddp_runner.h",],
    visibility = ["//visibility:public"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
        "//manipulation/models/wsg_50_description:models",
        "//manipulation/models/kuka_connector_description:models",
    ],
    deps = [
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//examples/kuka_iiwa_arm:iiwa_lcm",
        "@lcmtypes_bot2_core",
        "@lcmtypes_robotlocomotion",
        "@lcm",
        "//lcmtypes:generic_string_msg",
        "//traj_gen:cost_function_kuka_arm",
        "//traj_gen:ilqrsolver",
        "//traj_gen:kuka_arm",
        "//lcmtypes:motion_plan_query",
        "//multibody/plant",
        "//multibody/parsing",
        "//math:geometric_transform",
        "//traj_gen:config",
    ],
)

drake_cc_library(
    name = "admm_runner",
    srcs = ["admm_runner.cc",],
    hdrs = ["admm_runner.h",],
    visibility = ["//visibility:public"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
        "//manipulation/models/wsg_50_description:models",
        "//manipulation/models/kuka_connector_description:models",
    ],
    deps = [
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//examples/kuka_iiwa_arm:iiwa_lcm",
        "@lcmtypes_bot2_core",
        "@lcmtypes_robotlocomotion",
        "//lcmtypes:generic_string_msg",
        "@lcm",
        "//traj_gen:cost_function_kuka_arm_track",
        "//traj_gen:ilqrsolver_track",
        "//traj_gen:kuka_arm_track",
        # "//traj_gen:udpsolver",
        "//lcmtypes:motion_plan_query",

        "//multibody/plant",
        "//multibody/parsing",
        "//math:geometric_transform",
        "//traj_gen:config",
        "//solvers:mathematical_program",
        "//solvers:solve",
        "//solvers:constraint",
        "//traj_gen/constraint:fk_constraint",
    ],
)

drake_cc_binary(
    name = "rerun_multi_traj",
    srcs = ["rerun_multi_traj.cc",],
    visibility = ["//visibility:public"],
    deps = [
        "@lcm",
        "@gflags",
        "@lcmtypes_bot2_core",
        "@lcmtypes_robotlocomotion",
        "//lcmtypes:generic_string_msg",
        "//common:find_resource",
        "//math:geometric_transform",
        "//traj_gen:admm_runner",
        "//traj_gen:ddp_runner",
        "//traj_gen/ilqr_kkt:ddp_runner_contact",
        "//traj_gen/ilqr_kkt:admm_runner_contact",
        "//traj_gen:config",
        "//lcmtypes:manipulator_traj",
        "//lcmtypes:motion_plan_query",
    ],
)

drake_cc_binary(
    name = "ca_unitest",
    srcs = ["ca_unitest.cc",],
    visibility = ["//visibility:public"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
        "//manipulation/models/wsg_50_description:models",
        "//manipulation/models/kuka_connector_description:models",
    ],
    deps = [
        "@eigen",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//examples/kuka_iiwa_arm:iiwa_lcm",
        "//multibody/plant",
        "//multibody/parsing",
        "//math:geometric_transform",
        "//traj_gen:config",
        "//solvers:mathematical_program",
        "//solvers:solve",
        "//solvers:constraint",
        "//traj_gen/constraint:fk_constraint",
    ],
)

drake_cc_binary(
    name = "autodiff_example",
    srcs = ["autodiff_example.cc"],
    deps = [
        "@drake//math:gradient",
    ],
)