load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)

package(
    default_visibility = [":__subpackages__"],
)

COPTS = ["-Wno-unused-parameter",
 "-Wno-unused-function",
 ]


drake_cc_library(
    name = "cost_function_kuka_arm_contact",
    srcs = ["cost_function_kuka_arm_contact.cc",],
    hdrs = ["cost_function_kuka_arm_contact.h",
            "config-kkt.h",],
    visibility = ["//visibility:public"],
    deps = [
        "@eigen",
    ],
    copts = COPTS,
)


drake_cc_library(
    name = "kuka_arm_contact",
    srcs = ["kuka_arm_contact.cpp",],
    hdrs = ["kuka_arm_contact.h",
            "config-kkt.h",
            "cost_function_kuka_arm_contact.h",
            ],
    visibility = ["//visibility:public"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
        "//manipulation/models/wsg_50_description:models",
        "//manipulation/models/kuka_connector_description:models",
        "//manipulation/models/ycb:models",
    ],
    deps = [
        "@eigen",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//examples/kuka_iiwa_arm:iiwa_lcm",
        "//multibody/plant",
        "//multibody/parsing",
        "//math:geometric_transform",
        "//common:find_resource",
    ],
    copts = COPTS,
)


drake_cc_library(
    name = "ilqr-kkt_solver",
    srcs = ["ilqr-kkt_solver.cpp",],
    hdrs = ["ilqr-kkt_solver.h",
            "config-kkt.h",
            "kuka_arm_contact.h",
            "cost_function_kuka_arm_contact.h",],
    visibility = ["//visibility:public"],
    deps = [
        "@eigen",
        "//common:find_resource",
        "//multibody/plant",
        "//multibody/parsing",
    ],
    copts = COPTS,
)


drake_cc_binary(
    name = "jacobian_test",
    srcs = ["jacobian_test.cc",],
    visibility = ["//visibility:public"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
        "//manipulation/models/wsg_50_description:models",
        "//manipulation/models/kuka_connector_description:models",
        # "//conveyor_belt_tamp:models",
        "//manipulation/models/ycb:models",
    ],
    deps = [
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//examples/kuka_iiwa_arm:iiwa_lcm",
        "//common:find_resource",
        "//multibody/plant",
        "//multibody/parsing",
        "//math:geometric_transform",
    ],
    copts = COPTS,
)


drake_cc_binary(
    name = "ilqr-kkt_test",
    srcs = ["ilqr-kkt_test.cc",
            "config-kkt.h",],
    visibility = ["//visibility:public"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
        "//manipulation/models/wsg_50_description:models",
        "//manipulation/models/kuka_connector_description:models",
        "//manipulation/models/ycb:models",
    ],
    deps = [
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//examples/kuka_iiwa_arm:iiwa_lcm",
        "@lcmtypes_bot2_core",
        "@lcmtypes_robotlocomotion",
        "//lcmtypes:generic_string_msg",

        "//traj_gen/ilqr_kkt:cost_function_kuka_arm_contact",
        "//traj_gen/ilqr_kkt:ilqr-kkt_solver",
        "//traj_gen/ilqr_kkt:kuka_arm_contact",
        "//common:find_resource",
        "//multibody/plant",
        "//multibody/parsing",
        "//math:geometric_transform",
    ],
    copts = COPTS,
)