load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)

package(
    default_visibility = [":__subpackages__"],
)

COPTS = ["-Wno-unused-parameter",
 "-Wno-unused-function",
 ]


drake_cc_library(
    name = "cost_function_kuka_arm_contact",
    srcs = ["cost_function_kuka_arm_contact.cc",],
    hdrs = ["cost_function_kuka_arm_contact.h",
            "config-kkt.h",],
    visibility = ["//visibility:public"],
    deps = [
        "@eigen",
    ],
    copts = COPTS,
)


drake_cc_library(
    name = "kuka_arm_contact",
    srcs = ["kuka_arm_contact.cpp",],
    hdrs = ["kuka_arm_contact.h",
            "config-kkt.h",
            "cost_function_kuka_arm_contact.h",
            ],
    visibility = ["//visibility:public"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
        "//manipulation/models/wsg_50_description:models",
        "//manipulation/models/kuka_connector_description:models",
        "//manipulation/models/ycb:models",
    ],
    deps = [
        "@eigen",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//examples/kuka_iiwa_arm:iiwa_lcm",
        "//multibody/plant",
        "//multibody/parsing",
        "//math:geometric_transform",
        "//common:find_resource",
    ],
    copts = COPTS,
)


drake_cc_library(
    name = "ilqr-kkt_solver",
    srcs = ["ilqr-kkt_solver.cpp",],
    hdrs = ["ilqr-kkt_solver.h",
            "config-kkt.h",
            "kuka_arm_contact.h",
            "cost_function_kuka_arm_contact.h",],
    visibility = ["//visibility:public"],
    deps = [
        "@eigen",
        "//common:find_resource",
        "//multibody/plant",
        "//multibody/parsing",
    ],
    copts = COPTS,
)


drake_cc_binary(
    name = "jacobian_test",
    srcs = ["jacobian_test.cc",],
    visibility = ["//visibility:public"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
        "//manipulation/models/wsg_50_description:models",
        "//manipulation/models/kuka_connector_description:models",
        # "//conveyor_belt_tamp:models",
        "//manipulation/models/ycb:models",
    ],
    deps = [
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//examples/kuka_iiwa_arm:iiwa_lcm",
        "//common:find_resource",
        "//multibody/plant",
        "//multibody/parsing",
        "//math:geometric_transform",
    ],
    copts = COPTS,
)


# drake_cc_binary(
#     name = "ilqr-kkt_test",
#     srcs = ["ilqr-kkt_test.cc",
#             "config-kkt.h",],
#     visibility = ["//visibility:public"],
#     data = [
#         "//examples/kuka_iiwa_arm:models",
#         "//manipulation/models/iiwa_description:models",
#         "//manipulation/models/wsg_50_description:models",
#         "//manipulation/models/kuka_connector_description:models",
#         "//manipulation/models/ycb:models",
#     ],
#     deps = [
#         "//examples/kuka_iiwa_arm:iiwa_common",
#         "//examples/kuka_iiwa_arm:iiwa_lcm",
#         "@lcmtypes_bot2_core",
#         "@lcmtypes_robotlocomotion",
#         "@gflags",
#         "@lcm",
#         "//lcmtypes:generic_string_msg",
#         "//traj_gen/ilqr_kkt:cost_function_kuka_arm_contact",
#         "//traj_gen/ilqr_kkt:ilqr-kkt_solver",
#         "//traj_gen/ilqr_kkt:kuka_arm_contact",
#         "//common:find_resource",
#         "//multibody/plant",
#         "//multibody/parsing",
#         "//math:geometric_transform",
#     ],
#     copts = COPTS,
# )

drake_cc_binary(
    name = "traj_opt_publisher",
    srcs = ["traj_opt_publisher.cc",
            "config-kkt.h",],
    visibility = ["//visibility:public"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
        "//manipulation/models/wsg_50_description:models",
        "//manipulation/models/kuka_connector_description:models",
        "//manipulation/models/ycb:models",
    ],
    deps = [
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//examples/kuka_iiwa_arm:iiwa_lcm",
        "@lcmtypes_bot2_core",
        "@lcmtypes_robotlocomotion",
        "@gflags",
        "@lcm",
        "//lcmtypes:generic_string_msg",
        "//traj_gen/ilqr_kkt:cost_function_kuka_arm_contact",
        "//traj_gen/ilqr_kkt:ilqr-kkt_solver",
        "//traj_gen/ilqr_kkt:kuka_arm_contact",
        "//common:find_resource",
        "//multibody/plant",
        "//multibody/parsing",
        "//math:geometric_transform",
    ],
    copts = COPTS,
)

drake_cc_binary(
    name = "traj_visualizer",
    srcs = ["traj_visualizer.cc"],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
        "//manipulation/models/wsg_50_description:models",
        "//manipulation/models/kuka_connector_description:models",
        "//manipulation/models/ycb:models",

    ],
    deps = [
        "@gflags",
        "@jsoncpp",
        "@lcm",
        "//traj_gen/ilqr_kkt/object:object",
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//examples/kuka_iiwa_arm:iiwa_common",
        "//examples/kuka_iiwa_arm:iiwa_lcm",
        "//traj_gen/ilqr_kkt:robot_time_sender",
        "//geometry:geometry_visualization",
        "//manipulation/schunk_wsg:schunk_wsg_lcm",
        "//manipulation/schunk_wsg:schunk_wsg_constants",
        "//multibody/parsing",
        "//multibody/plant",
        "//math:geometric_transform",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:demultiplexer",
        "//systems/primitives:multiplexer",
        "//systems/rendering:multibody_position_to_geometry_pose",
    ],
)

drake_cc_library(
    name = "robot_time_sender",
    srcs = ["robot_time_sender.cc"],
    hdrs = ["robot_time_sender.h"],
    deps = [
        "//common:essential",
        "//lcmtypes:lcmtypes_drake_cc",
        "//systems/framework:leaf_system",
    ],
)